--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,27 @@
 .home {
+    width: 100%;
+    height: 100%;
     .title {
         color: white;
     }
+}
+
+.homeContainer {
     display: flex;
-    .homeContainer {
-        background-color: lightblue;
-        flex: 6;
-    }
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+
+.chart {
+    flex: 1;
+}
+
+.tooltip {
+    border-radius: 0.25rem;
+    background-color: lightblue;
+    color: black;
+    padding: 1rem;
+    text-align: center;
 }
