--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,12 +10,17 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .chart {
     flex: 1;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    align-self: flex-start;
 }
 
 .tooltip {
